--- a/index.html
+++ b/index.html
@@ -57,6 +57,32 @@
                 </div>
             </div>
         </section>
+        <!-- What-i-do-section -->
+        <section class="What-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="sikll-title">Vanilla JavaScript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam molestiae accusamus dolorem esse, quisquam quasi!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="sikll-title">React</p>
+                    <p class="skill-description">Fuga, consequatur amet blanditiis, reiciendis omnis assumenda earum distinctio ipsam, ducimus eligendi illum quia. Ex.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="sikll-title">Notejs</p>
+                    <p class="skill-description">Rem molestias adipisci velit beatae tenetur id libero ducimus minima harum delectus, repellat corrupti enim.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="sikll-title">MongoDB</p>
+                    <p class="skill-description">Doloremque, ipsam. Quod consectetur itaque, illo deleniti dicta asperiores. Sed maiores esse deserunt ratione maxime.</p>
+                </div>
+            </div>
+        </section>
 
 
     </main>
