--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                 </div>
             </div>
         </section>
+        <!-- Resume section -->
+        <section class="resume">
+            <h3 class="section-title">A Summary of My Resume</h3>
+
+        </section>
 
 
     </main>
