--- a/index.html
+++ b/index.html
@@ -131,10 +131,34 @@
             <div class="resume-button">
                 <button class="btn-primary">Download CV</button>
             </div>
-
         </section>
+        <!-- contract section -->
+        <section class="contact">
+            <div>
+                <h3 class="section-title">Lets Connect</h3>
+                <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quia animi provident quam aspernatur veritatis culpa necessitatibus ipsa optio blanditiis nisi earum perspiciatis dolorum sint impedit ullam quae, iure nihil!</p>
+                <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/insta.png" alt="">
+                </a>
 
+            </div>
+            <div>
+                <h3 class="section-title">Message me</h3>
+                <form action="">
+                    <input type="text" name="" placeholder="Your Name">
+                    <input type="text" name="" placeholder="Your Email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <input class="btn-primary" type="submit" name="submit">
+                </form>
 
+            </div>
+        </section>
     </main>
     <footer>
 
